# botfair

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
genapi/: .gitignore  API.md  SportsAPING.xml  SportsAPING.xml.SHA256SUM  SportsAPING.xml.patch  TODO.md  main.py  main.sh
src/: client.rs  generated_api.rs  generated_exceptions.rs  generated_methods.rs  generated_requests.rs  generated_types.rs  json_rpc.rs  lib.rs  main.rs  result.rs
