[package]
name = "botfair"
version = "0.1.99"
description = "rust bindings for Betfair's SportsAPING"
keywords = ["betfair", "jsonrpc", "aping", "sports", "betting"]
repository = "https://git.esotericnonsense.com/pub/botfair.git"
authors = ["Daniel Edgecumbe <git@esotericnonsense.com>"]
readme = "README.md"
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
log = "0.4"

# Used for the actual API calls.
# rustls-tls required for client certificate support.
# socks used to enable the use of a socks5 proxy.
reqwest = { "version" = "0.9", "features" = ["rustls-tls", "socks"] }

# Used to generate random identifiers for each RPC call.
rand = "0.7"

# Used for serialization/deserialization of objects.
serde = "1"

# Some of the BF datatypes require datetimes.
chrono = { "version" = "0.4", "features" = ["serde"] }
